# routes/index.js
@@ -1,4 +1,5 @@
 const router = require('express').Router();
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
 
@@ -7,5 +8,17 @@ router.get('/', (req, res) => {
     res.send('So Far So Good');});
 
 router.use('/books', require('./books'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) {return next(err); }
+        res.redirect('/');
+    });
+});
+
+
+
 
 module.exports = router;
